# rassberry-assistant

./: .editorconfig  .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
assets/dashboard/: README.md
assets/voice_pack/: README.md
config/: assistant.yaml  commands.yaml  windows_agent.json
docs/: production-roadmap.md
scripts/: deploy_to_pi.py  download_tts_models.py  import_voice_pack.py  install_pi.sh  install_windows_agent.ps1  start_windows_agent.ps1  start_windows_tunnel.ps1  windows_agent.py
src/rassberry_assistant/: __init__.py  __main__.py  actions.py  assistant.py  audio.py  command_store.py  config.py  dashboard.py  env.py  llm.py  router.py  stt.py  system_control.py  tts.py  tts_library.py  utils.py  voicepack.py
systemd/: rassberry-assistant.service
tests/: test_actions.py  test_assistant.py  test_audio.py  test_command_store.py  test_router.py  test_system_control.py  test_tts.py  test_utils.py
tts/: README.md  catalog.json
web/: dashboard.css  dashboard.js  index.html  mic.css  mic.html  mic.js
